--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,7 @@ header, footer {
 .jumbotron:not(.jumbotron:nth-of-type(1)){
     padding-top: 10%;
 }
+
+.card {
+    box-shadow: 3px 3px rgb(114, 118, 122, 0.5);
+}
